# zaphyl

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  release-system.txt  zaphyl.example.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  backend.nginx.conf  proxy.caddy.json  proxy.nginx.conf  run.sh  zaphyl.toml
crates/zaphyl/: Cargo.toml
crates/zaphyl-config/: Cargo.toml
crates/zaphyl-config/src/: lib.rs  sites.rs
crates/zaphyl-config/tests/: example_config.rs  sites_loading.rs
crates/zaphyl-core/: Cargo.toml
crates/zaphyl-core/src/: access.rs  acme.rs  cache.rs  lib.rs  ratelimit.rs  router.rs  static_files.rs
crates/zaphyl-plugin/: Cargo.toml
crates/zaphyl-plugin/src/: lib.rs
crates/zaphyl-plugin/wit/: world.wit
crates/zaphyl/src/: acme.rs  cli.rs  http3.rs  http_front.rs  main.rs  metrics.rs  plugins.rs  tls.rs  upstream.rs
crates/zaphyl/tests/: acme.rs  cli_site.rs  grpc.rs  plugins.rs  proxy.rs  websocket.rs
packaging/: default.toml  zaphyl.service
test-plugins/filter/: Cargo.toml
test-plugins/filter/src/: lib.rs
web/: index.html
