[package]
name = "zaphyl-core"
description = "Core types and traits for the Zaphyl web server / reverse proxy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ipnet = "2"
percent-encoding = "2"

[lints]
workspace = true
