[package]
name = "zaphyl-plugin"
description = "WebAssembly plugin host for the Zaphyl reverse proxy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.102"
wasmtime = "45.0.2"
wasmtime-wasi = "45.0.2"

[lints]
workspace = true
